--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.pythonPath": "${workspaceFolder}/venv/Scripts/python.exe",
     "python.linting.pylintPath": "${workspaceFolder}/venv/Scripts/pylint.exe",
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.linting.pylintArgs": ["--errors-only"]
 }
